2007-12-17  Loic Fosse  <fosse@gostai.com>

	Fix error messages for flavored keywords.
	* src/parser/ugrammar.y: Here.

2007-12-17  Loic Fosse  <fosse@gostai.com>

	Handle flavors for keywords in the scanner.
	* src/parser/ugrammar.y: Get flavor of keywords from scanner and
	check if the flavor is relevant.
	* src/parser/utoken.l: Replace for, at, while and loop with their
	flavored version.

2007-12-16  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Always use boost::tokenizer and fix the handling of URBI_PATH.
	As opposed to boost:regex, boost::tokenizer is a header-only library
	which we can use on Aibo.
	* configure.ac: Invoke BOOST_TOKENIZER.
	* src/console-server.cc (ConsoleServer::ConsoleServer): Here.

2007-12-14  mefyl  <mefyl@lrde.epita.fr>

	Use boost tokenizer to iterate over URBI_PATH.
	* src/console-server.cc: Here.

2007-12-14  mefyl  <mefyl@lrde.epita.fr>

	Fix console-server.
	* .automerge_moves: Remove erroneous entry.
	* src/console-server.cc: Apply changes lost during merge from
        trunk.

2007-12-14  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Make k2 compile again.
	* include/kernel/userver.hh (addConnection): Add an overload to
	support the legacy interface used by k1.  This is required to use
	the `network' module without forking it for k1 and k2.
	* include/kernel/userver.hxx (addConnection): Implement the new
	overload.
	* src/Makefile.am (dist_libkernel_la_SOURCES): Remove the files that
	no longer exist.
	(uconsole_SOURCES, uconsole_LDADD): Adjust the names to
	urbi_console_SOURCES / urbi_console_LDADD.
	* src/console-server.cc: Adjust the ctor and saveFile.
	* src/uconnection.cc: Do not reference non existent headers or
	members.

2007-12-14  mefyl  <mefyl@lrde.epita.fr>

	merge -r 2055:2066 https://svn.gostai.com/svn/kernel1/trunk
	2007-12-14  Guillaume Deslandes  <deslandes@gostai.com>
	Make good use of period in urbi-console.
	* src/console-server.cc: Here.
	The "utime() < startTime + period" test was never true.
