@@ -67,6 +67,21 @@
 #include "kernel/uconnection.hh"
 #include "parser/uparser.hh"
 
+#define FLAVOR_ASSERT(Loc, Keyword, Flav, Condition)			\
+  if (!(Condition))							\
+  {									\
+    std::string f;							\
+    switch (Flav)							\
+    {									\
+      case ast::flavor_pipe: f = "|"; break;				\
+      case ast::flavor_comma: f = ","; break;				\
+      case ast::flavor_and: f = "&"; break;				\
+      default: f = ";";							\
+    }									\
+    error(Loc, "invalid flavor `" + f + "' for `" Keyword  "' keyword"); \
+    YYERROR;								\
+  }
+
   namespace
   {
 
@@ -834,11 +849,8 @@ expr:
 stmt:
   "at" "(" softtest ")" stmt %prec CMDBLOCK
     {
-      if ($1 != ast::flavor_semicolon && $1 != ast::flavor_and)
-      {
-	error(@$, "invalid flavor for `at' keyword");
-	YYERROR;
-      }
+      FLAVOR_ASSERT(@$, "for", $1,
+                    $1 == ast::flavor_semicolon || $1 == ast::flavor_and)
       warn_implicit(up, @5, $5);
       $$ = 0;
     }
@@ -866,11 +878,8 @@ stmt:
     }
 | "for" "(" stmt ";" expr ";" stmt ")" stmt %prec CMDBLOCK
     {
-      if ($1 != ast::flavor_semicolon && $1 != ast::flavor_pipe)
-      {
-	error(@$, "invalid flavor for `for' keyword");
-	YYERROR;
-      }
+      FLAVOR_ASSERT(@$, "for", $1,
+                    $1 == ast::flavor_semicolon || $1 == ast::flavor_pipe)
       $$ = for_loop (@$, $1, $3, $5, $7, $9);
     }
 | "for" "identifier" "in" expr "{" stmts "}"    %prec CMDBLOCK
@@ -930,11 +939,8 @@ stmt:
     }
 | "while" "(" expr ")" stmt %prec CMDBLOCK
     {
-      if ($1 != ast::flavor_semicolon && $1 != ast::flavor_pipe)
-      {
-	error(@$, "invalid flavor for `while' keyword");
-	YYERROR;
-      }
+      FLAVOR_ASSERT(@$, "while", $1,
+                    $1 == ast::flavor_semicolon || $1 == ast::flavor_pipe)
       $$ = new ast::While(@$, $1, $3, $5);
     }
 ;
